# rbac-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20250130050313_create_rbac_tables.down.sql  20250130050313_create_rbac_tables.up.sql
src/: errors.rs  lib.rs  models.rs  repository.rs  service.rs  types.rs
